--- a/第1节 webpack实战/lesson17-externals配置/src/index.html
+++ b/第1节 webpack实战/lesson17-externals配置/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <!-- <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script> -->
 
 
     <div id="less-container">less-container</div>
